updat1 dari server (1)

--- a/.htaccess
+++ b/.htaccess
@@ -7,4 +7,7 @@ RewriteRule ^logout$ login.php?act=logout [L]
 RewriteRule ^([a-zA-Z0-9_-]+)$ index1.php?p=$1 [L]
 RewriteRule ^([a-zA-Z0-9_-]+)/$ index1.php?p=$1 [L]
 
+RewriteCond %{REQUEST_URI} ^/socket/ [NC]
+RewriteRule ^(.*)$ http://10.0.0.121:3000/$1 [P,L]
+
 Options All -Indexes
