--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ dist
 login_assets
 plugins
 uploads
-koneksi.php
+# koneksi.php
 pages/cetak/qrcode.png
 pages/cetak/qrcode_A.png
 pages/cetak/qrcode_B.png
